--- a/Udacity_ND/P2/t5_Trie.ipynb
+++ b/Udacity_ND/P2/t5_Trie.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -127,30 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(__main__.TrieNode,\n",
-       "            {'u': <__main__.TrieNode at 0x7fd802bc9fa0>,\n",
-       "             'a': <__main__.TrieNode at 0x7fd802bc97f0>})"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_node = MyTrie.root.children['f']\n",
-    "f_node.children"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -158,12 +135,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ef242646e3549978e0fe58b13e69291",
+       "model_id": "85b0a316bfa84f7d94d08695f1426d82",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='f', description='prefix'), Output()), _dom_classes=('widget-interact',))"
+       "interactive(children=(Text(value='fu', description='prefix'), Output()), _dom_classes=('widget-interact',))"
       ]
      },
      "metadata": {},
@@ -183,7 +160,36 @@
     "            print(prefix + \" not found\")\n",
     "    else:\n",
     "        print('')\n",
-    "interact(f,prefix='f');"
+    "interact(f,prefix='fu');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.TrieNode object at 0x7ff2a3b90880>\n",
+      "<__main__.TrieNode object at 0x7ff2a3b90b50>\n",
+      "None\n",
+      "False\n",
+      "['le', 'let', 'lication']\n"
+     ]
+    }
+   ],
+   "source": [
+    "testTrie = Trie()\n",
+    "wordList = ['apple', 'app', 'ape', 'applet', 'application']\n",
+    "for word in wordList:\n",
+    "    testTrie.insert(word)\n",
+    "print(testTrie.find('app'))\n",
+    "print(testTrie.find('apple'))\n",
+    "print(testTrie.find('sum'))\n",
+    "print(testTrie.startsWith('appll'))\n",
+    "print(testTrie.find('app').suffixes())\n"
    ]
   },
   {
